# Rubiks-Cube-Solver

./: CMakeLists.txt
include/: Cube.h  CubePiece.h  Linear.h  Matrix.h  RubiksCube.h  Shader.h  Triangle.h  Vertex.h  point_transformations.h
shaders/: shader.frag  shader.vert
src/: Cube.cpp  CubePiece.cpp  Linear.cpp  Matrix.cpp  RubiksCube.cpp  main.cpp  point_transformations.cpp
